# calcpad-mode

./: .gcloudignore  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  DEVELOPER.md  Directory.Build.props  README.md  brackets.html  calcpad-panel-and-settings.html  changes.diff  cloudbuild.engine.yaml  cloudbuild.web.yaml  cloudbuild.yaml  constants.html  examples.yml  expressions.html  fields-of-application.html  functions.html  high-performance-vectors-and-matrices.html  how-it-works.html  index.html  installation.html  iterative-procedures.html  licensing-and-terms-of-use.html  matrices.html  mkdocs.yml  new-calcpad-panel-and-settings.html  new-desktop-app.html  new-includes.html  new-linter.html  new-pdf-export.html  new-table-of-contents.html  new-vscode-extension.html  new-web-deployment.html  numerical-methods.html  operators.html  plotting.html  programming.html  quick-reference.html  (+9 more)
.claude/: CALCPAD_REFERENCE.md  settings.json  settings.local.json
.github/: release-notes-template.md
Calcpad.Api/: PyCalcpadEval.py  PyCalcpadRun.py  PyCalcpadWrapper.py
Calcpad.Cli/: Calcpad.Cli.csproj  CalcpadReader.cs  Converter.cs  Directory.Build.props  Messages.Designer.cs  Messages.bg.resx  Messages.resx  Messages.zh.resx  Program.cs  Settings.xml  start.sh
Calcpad.Web/frontend/calcpad-desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
Calcpad.Web/frontend/calcpad-desktop/src-tauri/capabilities/: default.json
Calcpad.Web/frontend/calcpad-desktop/src-tauri/src/: lib.rs  main.rs
(+2226 files in other folders)
